# tano

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
.sqlx/: query-2de49aae50d7ed4211e9cbe8d55fb92282f9135bfad80bf81648310686c399ca.json  query-8ad1f44ae3b9393672a88f05f50f18ae5da33af5e2b283d4be37b53afc454af6.json
nix/: home-manager.nix  shell.nix  tano.nix
tano/: Cargo.toml
tano-backend/: Cargo.toml
tano-backend/src/: lib.rs  model.rs
tano-backend/src/actor/: cmd.rs  handle.rs  mod.rs  msg.rs
tano-config/: Cargo.toml
tano-config/src/: config.rs  lib.rs
tano-config/src/actor/: cmd.rs  handle.rs  mod.rs  msg.rs
tano-config/src/providers/: local.rs  mod.rs
tano-config/src/utils/: get_config_dir.rs  mod.rs
tano-database/: Cargo.toml
tano-database/migrations/: 0001_tano.sql
tano-database/src/: lib.rs  song.rs
tano-database/src/actor/: cmd.rs  handle.rs  mgs.rs  mod.rs
tano-macro/: Cargo.toml
tano-macro/src/: lib.rs  trace_dbg.rs
tano-providers/: Cargo.toml
tano-providers/src/: lib.rs  local.rs
tano-shared/: Cargo.toml
tano-shared/src/: get_config_dir.rs  get_config_file.rs  get_data_dir.rs  get_parent_dir.rs  lib.rs  project_directory.rs
tano-tui/: Cargo.toml
tano-tui/src/: lib.rs  model.rs  view.rs
tano-tui/src/actor/: cmd.rs  handle.rs  mod.rs  msg.rs
tano-tui/src/components/: component.rs  loading.rs  mod.rs  root.rs  songs.rs
tano-tui/src/utils/: list_state.rs  mod.rs  restore.rs  try_init.rs
tano-watcher/: Cargo.toml
tano-watcher/src/: lib.rs  model.rs  path_type.rs  watch_entry.rs  watch_mode.rs  watch_type.rs
tano-watcher/src/actor/: cmd.rs  handle.rs  mod.rs  msg.rs
tano/src/: cmd.rs  handle_message.rs  logging.rs  main.rs  msg.rs
tano/src/model/: config_state.rs  database_state.rs  mod.rs
tano/src/update/: backend.rs  config.rs  database.rs  handles.rs  mod.rs  tui.rs  watcher.rs
tano/src/update/providers/: get_all_songs.rs  mod.rs  msg.rs
tano/src/update/utils/: init_providers.rs  mod.rs
tano/src/update/watcher/: mod.rs
