[package]
name = "tano-config"
version = "0.1.0"
edition = "2024"

[dependencies]
tano-shared = { path = "../tano-shared" }
tano-macro = { path = "../tano-macro" }
color-eyre = "0.6.5"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.1"
tracing = "0.1.44"
shellexpand = "3.1.1"
