[package]
name = "tano-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
tano-config = { path = "../tano-config" }
tano-database = { path = "../tano-database" }
tano-macro = { path = "../tano-macro" }
tokio = { version = "1.49.0", features = ["full"] }
color-eyre = "0.6.5"
tracing = "0.1.44"
